[gd_scene load_steps=24 format=2]

[ext_resource path="res://Cutscenes/Breakout/background.png" type="Texture" id=1]
[ext_resource path="res://CutsceneBase.gd" type="Script" id=2]
[ext_resource path="res://Cutscenes/Breakout/Somewhere, Base.png" type="Texture" id=3]
[ext_resource path="res://Cutscenes/Breakout/EonReactsToBullet.png" type="Texture" id=4]
[ext_resource path="res://Cutscenes/Breakout/EonRuns.png" type="Texture" id=5]
[ext_resource path="res://Cutscenes/Breakout/EonAimsAtWindow.png" type="Texture" id=6]
[ext_resource path="res://Cutscenes/Breakout/WindowCracks.png" type="Texture" id=7]
[ext_resource path="res://Cutscenes/Breakout/Eon shoots guards.png" type="Texture" id=8]
[ext_resource path="res://Cutscenes/Breakout/EonSeesBullet.png" type="Texture" id=9]
[ext_resource path="res://Cutscenes/Breakout/EonEscapes.png" type="Texture" id=10]
[ext_resource path="res://Cutscenes/Breakout/HQGetsCalled.png" type="Texture" id=11]
[ext_resource path="res://Cutscenes/Breakout/HertzTalks.png" type="Texture" id=12]
[ext_resource path="res://Cutscenes/Breakout/SurvivedGuardScared.png" type="Texture" id=13]
[ext_resource path="res://Cutscenes/Breakout/HertzCalls.png" type="Texture" id=14]
[ext_resource path="res://Cutscenes/Breakout/SurvivedGuardReceivesCall.png" type="Texture" id=15]
[ext_resource path="res://Cutscenes/Breakout/Border.png" type="Texture" id=16]
[ext_resource path="res://Cutscenes/Breakout/SurvivedGuardOpensMask.png" type="Texture" id=17]
[ext_resource path="res://Cutscenes/Breakout/SurvivedGuardPullsTrigger.png" type="Texture" id=18]
[ext_resource path="res://Cutscenes/Breakout/SurvivedGuardCommitsSuicide.png" type="Texture" id=19]
[ext_resource path="res://Cutscenes/Breakout/EonBashesGuard.png" type="Texture" id=20]
[ext_resource path="res://Cutscenes/Breakout/EonTakesGun.png" type="Texture" id=21]

[sub_resource type="Animation" id=1]
resource_name = "Cutscene1"
length = 85.0
tracks/0/type = "value"
tracks/0/path = NodePath("scene1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Background:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 5, 14.9, 15.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 0.364706, 0.364706, 0.364706, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("scene1:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 6.9, 7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( -1280, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Node2D2/scene2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 11.5, 11.6, 14.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1280, 0 ), Vector2( 1280, 0 ), Vector2( 0, 0 ), Vector2( -50, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Node2D2/scene3:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 12.9, 13, 14.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 720 ), Vector2( 0, 720 ), Vector2( 0, 0 ), Vector2( 10, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Group4/scene4-1:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 14.9, 15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -1280, 0 ), Vector2( -1280, 0 ), Vector2( 0, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Group4/scene4-2:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1280, 0 ), Vector2( 0, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Group4/scene4-3:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 17.9, 18, 18.6, 18.7, 18.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 720 ), Vector2( 0, 720 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( -10, 0 ), Vector2( 0, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Border:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Group4/scene4-2:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 15.4, 15.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Group4/scene4-1:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 15.4, 15.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Group4/scene4-4:position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 19.4, 19.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1280, 0 ), Vector2( 1280, 0 ), Vector2( 0, 0 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Group4/scene4-5:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 20.9, 21, 28.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -1280, 0 ), Vector2( -1280, 0 ), Vector2( 0, 0 ), Vector2( 100, 0 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("scene5:position")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("scene5:modulate")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0, 25.9, 28.9, 31.9, 36.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("Group4:visible")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0, 29 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("scene6-1:position")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 0, 39.9, 40.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1280, 0 ), Vector2( 1280, 0 ), Vector2( 0, 0 ) ]
}
tracks/17/type = "value"
tracks/17/path = NodePath("scene6-2:modulate")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"times": PoolRealArray( 0, 41.9, 43.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/18/type = "value"
tracks/18/path = NodePath("scene6-3:position")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/keys = {
"times": PoolRealArray( 0, 45.4, 45.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -1280, 0 ), Vector2( -1280, 0 ), Vector2( 0, 0 ) ]
}
tracks/19/type = "value"
tracks/19/path = NodePath("scene6-4:position")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/keys = {
"times": PoolRealArray( 0, 52.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/20/type = "value"
tracks/20/path = NodePath("scene6-4:modulate")
tracks/20/interp = 1
tracks/20/loop_wrap = true
tracks/20/imported = false
tracks/20/enabled = true
tracks/20/keys = {
"times": PoolRealArray( 0, 52.5, 53.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/21/type = "value"
tracks/21/path = NodePath("scene6-2:position")
tracks/21/interp = 1
tracks/21/loop_wrap = true
tracks/21/imported = false
tracks/21/enabled = true
tracks/21/keys = {
"times": PoolRealArray( 0, 41.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/22/type = "value"
tracks/22/path = NodePath("Group4/scene4-4:modulate")
tracks/22/interp = 1
tracks/22/loop_wrap = true
tracks/22/imported = false
tracks/22/enabled = true
tracks/22/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/23/type = "value"
tracks/23/path = NodePath("Node2D/scene6-5:position")
tracks/23/interp = 1
tracks/23/loop_wrap = true
tracks/23/imported = false
tracks/23/enabled = true
tracks/23/keys = {
"times": PoolRealArray( 0, 59.5, 61 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1280, 0 ), Vector2( 1280, 0 ), Vector2( 0, 0 ) ]
}
tracks/24/type = "value"
tracks/24/path = NodePath("Node2D/scene6-6:position")
tracks/24/interp = 1
tracks/24/loop_wrap = true
tracks/24/imported = false
tracks/24/enabled = true
tracks/24/keys = {
"times": PoolRealArray( 0, 62.5, 64, 66, 66.3 ),
"transitions": PoolRealArray( 1, 1, 1, 0.5, 0.5 ),
"update": 0,
"values": [ Vector2( 1280, 0 ), Vector2( 1280, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 114, 86 ) ]
}
tracks/25/type = "value"
tracks/25/path = NodePath("Node2D/scene6-6:scale")
tracks/25/interp = 1
tracks/25/loop_wrap = true
tracks/25/imported = false
tracks/25/enabled = true
tracks/25/keys = {
"times": PoolRealArray( 0, 66, 66.3 ),
"transitions": PoolRealArray( 1, 0.5, 0.5 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0.843056, 0.843056 ) ]
}
tracks/26/type = "value"
tracks/26/path = NodePath("scene6-7:visible")
tracks/26/interp = 1
tracks/26/loop_wrap = true
tracks/26/imported = false
tracks/26/enabled = true
tracks/26/keys = {
"times": PoolRealArray( 0, 66, 66.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}
tracks/27/type = "value"
tracks/27/path = NodePath("scene6-7:scale")
tracks/27/interp = 1
tracks/27/loop_wrap = true
tracks/27/imported = false
tracks/27/enabled = true
tracks/27/keys = {
"times": PoolRealArray( 0, 66.5, 81.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1.15, 1.15 ) ]
}
tracks/28/type = "value"
tracks/28/path = NodePath("Node2D2:modulate")
tracks/28/interp = 1
tracks/28/loop_wrap = true
tracks/28/imported = false
tracks/28/enabled = true
tracks/28/keys = {
"times": PoolRealArray( 0, 14.9, 15.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 0.364706, 0.364706, 0.364706, 1 ) ]
}
tracks/29/type = "value"
tracks/29/path = NodePath("scene0-1:position")
tracks/29/interp = 1
tracks/29/loop_wrap = true
tracks/29/imported = false
tracks/29/enabled = true
tracks/29/keys = {
"times": PoolRealArray( 6.9, 7, 9.6, 11.4, 11.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1280, 0 ), Vector2( 0, 0 ), Vector2( -20, 0 ), Vector2( -20, 0 ), Vector2( -1280, 0 ) ]
}
tracks/30/type = "value"
tracks/30/path = NodePath("scene0-2:position")
tracks/30/interp = 1
tracks/30/loop_wrap = true
tracks/30/imported = false
tracks/30/enabled = true
tracks/30/keys = {
"times": PoolRealArray( 0, 9.6, 9.9, 11.4, 11.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 720 ), Vector2( 0, 720 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( -1280, 0 ) ]
}
tracks/31/type = "value"
tracks/31/path = NodePath("scene6-7:modulate")
tracks/31/interp = 1
tracks/31/loop_wrap = true
tracks/31/imported = false
tracks/31/enabled = true
tracks/31/keys = {
"times": PoolRealArray( 74.3, 81.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("scene1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Background:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("scene1:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1280, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Node2D2/scene2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1280, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Node2D2/scene3:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1280, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Group4/scene4-1:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1280, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Group4/scene4-2:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1280, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Group4/scene4-3:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1280, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Group4/scene4-4:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1280, 0 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Group4/scene4-5:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1280, 0 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("scene5:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1280, 0 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("scene6-1:position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1280, 0 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("scene6-2:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1280, 0 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("scene6-3:position")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1280, 0 ) ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("scene6-4:position")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1280, 0 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("Border:position")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("Group4/scene4-2:modulate")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/17/type = "value"
tracks/17/path = NodePath("Group4/scene4-1:modulate")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/18/type = "value"
tracks/18/path = NodePath("Group4/scene4-4:modulate")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/19/type = "value"
tracks/19/path = NodePath("scene5:modulate")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/20/type = "value"
tracks/20/path = NodePath("Group4:visible")
tracks/20/interp = 1
tracks/20/loop_wrap = true
tracks/20/imported = false
tracks/20/enabled = true
tracks/20/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/21/type = "value"
tracks/21/path = NodePath("scene6-2:visible")
tracks/21/interp = 1
tracks/21/loop_wrap = true
tracks/21/imported = false
tracks/21/enabled = true
tracks/21/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/22/type = "value"
tracks/22/path = NodePath("scene6-2:modulate")
tracks/22/interp = 1
tracks/22/loop_wrap = true
tracks/22/imported = false
tracks/22/enabled = true
tracks/22/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/23/type = "value"
tracks/23/path = NodePath("scene6-4:modulate")
tracks/23/interp = 1
tracks/23/loop_wrap = true
tracks/23/imported = false
tracks/23/enabled = true
tracks/23/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/24/type = "value"
tracks/24/path = NodePath("Node2D/scene6-5:position")
tracks/24/interp = 1
tracks/24/loop_wrap = true
tracks/24/imported = false
tracks/24/enabled = true
tracks/24/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1280, 0 ) ]
}
tracks/25/type = "value"
tracks/25/path = NodePath("Node2D/scene6-6:position")
tracks/25/interp = 1
tracks/25/loop_wrap = true
tracks/25/imported = false
tracks/25/enabled = true
tracks/25/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1280, 0 ) ]
}
tracks/26/type = "value"
tracks/26/path = NodePath("Node2D/scene6-6:scale")
tracks/26/interp = 1
tracks/26/loop_wrap = true
tracks/26/imported = false
tracks/26/enabled = true
tracks/26/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/27/type = "value"
tracks/27/path = NodePath("scene6-7:visible")
tracks/27/interp = 1
tracks/27/loop_wrap = true
tracks/27/imported = false
tracks/27/enabled = true
tracks/27/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/28/type = "value"
tracks/28/path = NodePath("scene6-7:scale")
tracks/28/interp = 1
tracks/28/loop_wrap = true
tracks/28/imported = false
tracks/28/enabled = true
tracks/28/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/29/type = "value"
tracks/29/path = NodePath("Node2D2:modulate")
tracks/29/interp = 1
tracks/29/loop_wrap = true
tracks/29/imported = false
tracks/29/enabled = true
tracks/29/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/30/type = "value"
tracks/30/path = NodePath("scene0-1:position")
tracks/30/interp = 1
tracks/30/loop_wrap = true
tracks/30/imported = false
tracks/30/enabled = true
tracks/30/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1280, 0 ) ]
}
tracks/31/type = "value"
tracks/31/path = NodePath("scene0-2:position")
tracks/31/interp = 1
tracks/31/loop_wrap = true
tracks/31/imported = false
tracks/31/enabled = true
tracks/31/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 720 ) ]
}
tracks/32/type = "value"
tracks/32/path = NodePath("scene6-7:modulate")
tracks/32/interp = 1
tracks/32/loop_wrap = true
tracks/32/imported = false
tracks/32/enabled = true
tracks/32/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="Cutscene" type="Node2D"]
script = ExtResource( 2 )

[node name="StartTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Background" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 1 )
centered = false

[node name="scene0-1" type="Sprite" parent="."]
position = Vector2( 1280, 0 )
texture = ExtResource( 20 )
centered = false

[node name="scene0-2" type="Sprite" parent="."]
position = Vector2( 0, 720 )
texture = ExtResource( 21 )
centered = false

[node name="Tween" type="Tween" parent="."]

[node name="scene1" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -1280, 0 )
texture = ExtResource( 3 )
centered = false

[node name="Node2D2" type="Node2D" parent="."]

[node name="scene2" type="Sprite" parent="Node2D2"]
position = Vector2( 1280, 0 )
texture = ExtResource( 8 )
centered = false

[node name="scene3" type="Sprite" parent="Node2D2"]
position = Vector2( -1280, 0 )
texture = ExtResource( 5 )
centered = false

[node name="Group4" type="Node2D" parent="."]

[node name="scene4-1" type="Sprite" parent="Group4"]
position = Vector2( 1280, 0 )
texture = ExtResource( 9 )
centered = false

[node name="scene4-2" type="Sprite" parent="Group4"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 1280, 0 )
texture = ExtResource( 4 )
centered = false

[node name="scene4-3" type="Sprite" parent="Group4"]
position = Vector2( 1280, 0 )
texture = ExtResource( 6 )
centered = false

[node name="scene4-4" type="Sprite" parent="Group4"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 1280, 0 )
texture = ExtResource( 7 )
centered = false

[node name="scene4-5" type="Sprite" parent="Group4"]
position = Vector2( 1280, 0 )
texture = ExtResource( 10 )
centered = false

[node name="scene5" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 0 )
position = Vector2( 1280, 0 )
texture = ExtResource( 11 )
centered = false

[node name="scene6-1" type="Sprite" parent="."]
position = Vector2( 1280, 0 )
texture = ExtResource( 15 )
centered = false

[node name="scene6-2" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 1280, 0 )
texture = ExtResource( 14 )
centered = false

[node name="scene6-3" type="Sprite" parent="."]
position = Vector2( 1280, 0 )
texture = ExtResource( 13 )
centered = false

[node name="scene6-4" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 1280, 0 )
texture = ExtResource( 12 )
centered = false

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 270, 0 )

[node name="scene6-5" type="Sprite" parent="Node2D"]
position = Vector2( 1280, 0 )
texture = ExtResource( 17 )
centered = false

[node name="scene6-6" type="Sprite" parent="Node2D"]
position = Vector2( 1280, 0 )
texture = ExtResource( 18 )
centered = false

[node name="scene6-7" type="Sprite" parent="."]
visible = false
position = Vector2( 640, 360 )
texture = ExtResource( 19 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Cutscene1 = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="Border" type="Sprite" parent="."]
texture = ExtResource( 16 )
centered = false

[node name="EndTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="EndTimer" to="." method="_on_EndTimer_timeout"]
